E2J/part4/t18.output
running e2j
compiling the Java generated code
My_e2j.java:21: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
My_e2j.java:52: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
My_e2j.java:76: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
My_e2j.java:90: error: variable x_a is already defined in method main(String[])
int x_a;
    ^
4 errors
